force-app/main/default/objects/LiveChatTranscript/fields/End_Time_In_Sec__c.field-meta.xml
<CustomField>
    <fullName>End_Time_In_Sec__c</fullName>
    <formula>TEXT(EndTime - 4/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time In Sec</label>
    <type>Text</type>
</CustomField>