force-app/main/default/objects/LiveChatTranscript/fields/Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time__c</fullName>
    <formula>( EndTime - StartTime ) *24*3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>