force-app/main/default/objects/LiveChatTranscript/fields/Handle_Time_Readability__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time_Readability__c</fullName>
    <formula>IF (( EndTime - StartTime )&gt; 0, 
TEXT(FLOOR((EndTime - StartTime))) &amp; &quot;:&quot; &amp; 
TEXT(FLOOR( 24 * ((EndTime - StartTime) - FLOOR((EndTime - StartTime))))) &amp; &quot;:&quot; &amp; 
TEXT(ROUND(60 * (ROUND( 24 * ((EndTime - StartTime)-FLOOR((EndTime - StartTime))),8) - FLOOR( 
ROUND( 24 * ((EndTime - StartTime)- FLOOR((EndTime - StartTime))),8)) ),0))&amp; &quot;:&quot; &amp; 
TEXT(Round(60*(((EndTime - StartTime) *1440) - FLOOR(((EndTime - StartTime) *1440))),0)) 
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time (Readability)</label>
    <type>Text</type>
</CustomField>