force-app/main/default/objects/LiveChatTranscript/fields/Request_Time_In_sec__c.field-meta.xml
<CustomField>
    <fullName>Request_Time_In_sec__c</fullName>
    <formula>TEXT(RequestTime -4/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Time In sec</label>
    <type>Text</type>
</CustomField>