force-app/main/default/objects/LiveChatTranscript/fields/Respond_Time__c.field-meta.xml
<CustomField>
    <fullName>Respond_Time__c</fullName>
    <formula>(StartTime - RequestTime)*86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Respond Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>