force-app/main/default/objects/LiveChatTranscript/fields/Seconds__c.field-meta.xml
<CustomField>
    <fullName>Seconds__c</fullName>
    <formula>SECOND( Time_Var__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>