force-app/main/default/objects/LiveChatTranscript/fields/Seconds_til_next_Owner__c.field-meta.xml
<CustomField>
    <fullName>Seconds_til_next_Owner__c</fullName>
    <label>Seconds til next Owner</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>