force-app/main/default/objects/LiveChatTranscript/fields/Start_time_in_Sec__c.field-meta.xml
<CustomField>
    <fullName>Start_time_in_Sec__c</fullName>
    <formula>TEXT(StartTime - 4/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time In Sec</label>
    <type>Text</type>
</CustomField>