force-app/main/default/objects/LiveChatTranscript/fields/Time_Var__c.field-meta.xml
<CustomField>
    <fullName>Time_Var__c</fullName>
    <label>Time_Var</label>
    <type>Time</type>
</CustomField>