force-app/main/default/objects/LiveChatTranscript/fields/Transferred_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Transferred_Time_Stamp__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transferred Time Stamp</label>
    <type>DateTime</type>
</CustomField>